--- a/app/src/app/core/nav-bar/nav-bar.component.html
+++ b/app/src/app/core/nav-bar/nav-bar.component.html
@@ -2,10 +2,12 @@
 bg-white border-bottom fixed-top shadow-sm">
   <img src="/assets/images/logo.png" alt="logo" style="max-height: 70px" />
   <nav class="my-2">
-      <a class="p-2 text-dark text-decoration-none" href="#">Features</a>
-      <a class="p-2 text-dark text-decoration-none" href="#">Enterprise</a>
-      <a class="p-2 text-dark text-decoration-none" href="#">Support</a>
-      <a class="p-2 text-dark text-decoration-none" href="#">Pricing</a>
+      <a class="p-2"
+          routerLink="/"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact: true}">Home</a>
+      <a class="p-2" routerLink="/shop" routerLinkActive="active">Shop</a>
+      <a class="p-2" routerLink="/contact" routerLinkActive="active">Contact</a>
   </nav>
   <div class="d-flex align-items-center">
     <a class="position-relative">
