--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,5 +1,6 @@
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.5)" size="large" color="#000000" type="timer" [fullScreen]="true">
+  <h3> Loading... </h3>
+</ngx-spinner>
 <app-nav-bar></app-nav-bar>
-
-<div class="container" style="margin-top: 140px">
-  <router-outlet></router-outlet>
-</div>
+<app-section-header></app-section-header>
+<router-outlet></router-outlet>
