--- a/app/src/app/shop/product-item/product-item.component.html
+++ b/app/src/app/shop/product-item/product-item.component.html
@@ -1,20 +1,21 @@
 <div class="card h-100 shadow-sm" *ngIf="product">
-  <img class="img-fluid bg-info" alt="{{product.name}}" src="{{product.pictureUrl}}">
+
+  <div class="image position-relative" style="cursor: pointer;">
+    <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid bg-info">
+    <div class="d-flex align-items-center justify-content-center hover-overlay">
+      <button class="btn btn-primary me-2">
+        <i class="fa fa-shopping-cart"></i>
+      </button>
+      <button class="btn btn-primary" [routerLink]="['/shop', product.id]">View</button>
+    </div>
+  </div>
+
   <div class="card-body d-flex flex-column">
     <a href="" class="text-decoration-none">
-      <div class="">
         <h6 class="text-uppercase">
           {{product.name}}
         </h6>
-        <span class="mb-2">{{product.price | currency}}</span>
-      </div>
-      <div class="btn-group mt-auto">
-        <button class="btn btn-primary">
-          <i class="fa fa-shopping-cart me-2"></i>
-        </button>
-        <a [routerLink]="['/shop', product.id]">
-        <Button class="btn btn-outline-secondary">View</Button></a>
-      </div>
     </a>
+    <span class="mb-2">{{product.price | currency}}</span>
   </div>
 </div>
