--- a/app/src/app/shop/shop.component.html
+++ b/app/src/app/shop/shop.component.html
@@ -26,7 +26,7 @@
           >{{type.name}}</li>
       </ul>
     </section>
-    <section class="col-9">
+    <section class="col-9" *ngIf="types.length > 0 && brands.length > 0">
       <div class="d-flex justify-content-between align-items center pb-2">
         <app-paging-header
           [totalCount]="totalCount"
